@startuml
annotation java.lang.Override
class e1a9relacionesej2pistola.E1a9RelacionesEj2Pistola
class entidades.Juego
class entidades.Jugador
class entidades.RevolverDeAgua
class java.util.ArrayList
class java.util.Scanner
e1a9relacionesej2pistola.E1a9RelacionesEj2Pistola ..> entidades.Juego
e1a9relacionesej2pistola.E1a9RelacionesEj2Pistola ..> entidades.Jugador
e1a9relacionesej2pistola.E1a9RelacionesEj2Pistola ..> entidades.RevolverDeAgua
e1a9relacionesej2pistola.E1a9RelacionesEj2Pistola ..> java.util.ArrayList
e1a9relacionesej2pistola.E1a9RelacionesEj2Pistola ..> java.util.Scanner
entidades.Juego ..> java.util.ArrayList
entidades.Jugador ..> java.lang.Override
entidades.RevolverDeAgua ..> java.lang.Override
@enduml